--- a/doc/thesis/methods.tex
+++ b/doc/thesis/methods.tex
@@ -304,7 +304,7 @@ shows.
 \centering
 \label{fig:MeanResponseF}
 \includegraphics[trim=6cm 3cm 6cm 3cm,width=16cm]{images/mean_response}
-\caption{Response to $.1s$ impulses with the mean parameters from \cite{Friston2000}}
+\caption{Response to $0.1s$ impulses with the mean parameters from \cite{Friston2000}}
 \end{figure}
 
 While this could be the result of a stimulus
@@ -324,7 +324,7 @@ confusing, with peaks of well below $.1\%$ (\autoref{fig:MeanResponseJ}).
 \centering
 \label{fig:MeanResponseJ}
 \includegraphics[trim=6cm 3cm 6cm 3cm,width=16cm]{images/mean_response_johnston}
-\caption{Response to $.1s$ impulses with the mean parameters from \cite{Johnston2008}}
+\caption{Response to $0.1s$ impulses with the mean parameters from \cite{Johnston2008}}
 \end{figure}
 
 Its likely that these differences are due to some difference in preprocessing,
